- Ripped out some logics into separate classes

--- a/kitchentimer/TODO
+++ b/kitchentimer/TODO
@@ -2,12 +2,13 @@
 
 * Цифровой таймер
 ** Представление
-  - [ ] Добавить анимацию elastic для приходящей секунды
-  - [ ] Сделать исчезание текущей секунды
-  - [ ] Отображать исходное значение таймера перед запуском
+  - [X] Добавить анимацию elastic для приходящей секунды
+  - [X] Сделать исчезание текущей секунды
+  - [X] Отображать исходное значение таймера перед запуском
+  - [ ] Анимировать исходное значение таймера перед запуском
   - [ ] Оптимизация/кэширование отрисовки
 ** Взаимодействие
-  - [ ] Реализовать тэпа выходящего из режима редактирования
+  - [ ] Реализовать тэп выходящий из режима редактирования
   - [ ] Реализовать вход в режим редактированию по нажатию, как в аналоговом таймере
   - [ ] Реализовать акселерацию
 * Аналоговый таймер
@@ -22,6 +23,7 @@
   - [ ] Диалоговое окно по завершению
   - [ ] Активизация приложения при срабатывании таймера
   - [ ] Добавить зону пропускающего тэпа
+  - [ ] Отладить все события по таймеру
 * На следующие этапы
   - [ ] Разобраться с SVG/QPicture
   - [ ] Изучить API amoled дисплеев
