- Almost complete functionallity - Renamed application for Android

--- a/kitchentimer/TODO
+++ b/kitchentimer/TODO
@@ -5,27 +5,41 @@
   - [X] Добавить анимацию elastic для приходящей секунды
   - [X] Сделать исчезание текущей секунды
   - [X] Отображать исходное значение таймера перед запуском
-  - [ ] Анимировать исходное значение таймера перед запуском
+  - [X] Анимировать исходное значение таймера перед запуском
+  - [ ] Звук и вибрация при изменении времени вручную
   - [ ] Оптимизация/кэширование отрисовки
 ** Взаимодействие
-  - [ ] Реализовать тэп выходящий из режима редактирования
-  - [ ] Реализовать вход в режим редактированию по нажатию, как в аналоговом таймере
+  - [X] Реализовать тэп выходящий из режима редактирования
+  - [X] Реализовать вход в режим редактированию по нажатию, как в аналоговом таймере
   - [ ] Реализовать акселерацию
 * Аналоговый таймер
-  - [ ] Звук, вибрация и анимация при ручном переходе на 0
-  - [ ] Звук, вибрация и анимация аналогового таймера при срабатывании
-  - [ ] Звук и вибрация визуального изменения времени в аналоговом таймере
-  - [ ] Попробовать непрерывное перемещение стрелочки на аналоговом таймере
-  - [ ] Переход к стрелке при небольшом растворе угла
+  - [X] Звук и вибрация анимация при ручном переходе на 0
+  - [X] Звук и вибрация аналогового таймера при срабатывании
+  - [ ] Анимация аналогового таймера при срабатывании
+  - [X] Звук и вибрация визуального изменения времени в аналоговом таймере
+  - [X] Переход к стрелке при небольшом растворе угла
   - [ ] Оптимизация/кэширование
 * Остальное
+  - [ ] Бип по включению аудио
+  - [ ] Вибрация по выключению аудио
+  - [ ] Звон минуту с паузой в 10 секунд
+  - [ ] Иконки
   - [ ] Запретить (и/или обработать) переворот экрана (при определении гироскопом)
-  - [ ] Диалоговое окно по завершению
-  - [ ] Активизация приложения при срабатывании таймера
-  - [ ] Добавить зону пропускающего тэпа
+  - [ ] Диалоговое окно на подтверждение закрытия (??)
+  - [ ] Активизация приложение при срабатывании таймера (raise window)
   - [ ] Отладить все события по таймеру
-* На следующие этапы
+  - [ ] Научиться пользоваться отладчиками
   - [ ] Разобраться с SVG/QPicture
+* Мак
+  - [ ] Разобраться со шрифтом
+  - [ ] Разобраться со звуком
+  - [ ] Разобраться с зависанием на intro
+* От Дениса
+  - [ ] Спиральный вариант
+  - [ ] Вариант нажатой кнопки
+  - [ ] Вариант без красной стрелки
+* На следующие этапы
   - [ ] Изучить API amoled дисплеев
   - [ ] Изучить API жестов
   - [ ] Изучить API iPhone в целом
+  - [ ] http://www.yaplakal.com/forum7/topic518705.html
