- Moved audio sequencer and vibro sequencer to separate threads - Optimized graphics rendering - Implemented network logging

--- a/kitchentimer/TODO
+++ b/kitchentimer/TODO
@@ -1,45 +1,36 @@
 -*- mode: org -*-
 
 * Цифровой таймер
-** Представление
-  - [X] Добавить анимацию elastic для приходящей секунды
-  - [X] Сделать исчезание текущей секунды
-  - [X] Отображать исходное значение таймера перед запуском
-  - [X] Анимировать исходное значение таймера перед запуском
-  - [ ] Звук и вибрация при изменении времени вручную
+  - [ ] Звук при переключении времени
   - [ ] Оптимизация/кэширование отрисовки
-** Взаимодействие
-  - [X] Реализовать тэп выходящий из режима редактирования
-  - [X] Реализовать вход в режим редактированию по нажатию, как в аналоговом таймере
   - [ ] Реализовать акселерацию
 * Аналоговый таймер
-  - [X] Звук и вибрация анимация при ручном переходе на 0
-  - [X] Звук и вибрация аналогового таймера при срабатывании
   - [ ] Анимация аналогового таймера при срабатывании
-  - [X] Звук и вибрация визуального изменения времени в аналоговом таймере
-  - [X] Переход к стрелке при небольшом растворе угла
   - [ ] Оптимизация/кэширование
+* Глюки
+  - [ ] Не сохранение настройки включения звука
+  - [ ] Переход через час при близости к 0
+  - [ ] Адовые тормоза
+* Задачи для бетта релиза
+  - [ ] Активизация приложения при срабатывании таймера (raise window)
 * Остальное
-  - [ ] Бип по включению аудио
-  - [ ] Вибрация по выключению аудио
-  - [ ] Звон минуту с паузой в 10 секунд
-  - [ ] Иконки
-  - [ ] Запретить (и/или обработать) переворот экрана (при определении гироскопом)
-  - [ ] Диалоговое окно на подтверждение закрытия (??)
-  - [ ] Активизация приложение при срабатывании таймера (raise window)
   - [ ] Отладить все события по таймеру
   - [ ] Научиться пользоваться отладчиками
+* Мелкие вопросы по релизу
+  - [ ] Разрешения растровых изображений
+  - [ ] Не встроенные ресурсы для разных платформ
+* Не важное для релиза
+  - [ ] Диалоговое окно на подтверждение закрытия (??)
   - [ ] Разобраться с SVG/QPicture
+  - [ ] Сделать оптимальную сборку Qt
+  - [ ] Реализовать свою поддержку звука для Мака, Adnroid'а и всего остального
 * Мак
   - [ ] Разобраться со шрифтом
   - [ ] Разобраться со звуком
   - [ ] Разобраться с зависанием на intro
 * От Дениса
-  - [ ] Спиральный вариант
-  - [ ] Вариант нажатой кнопки
-  - [ ] Вариант без красной стрелки
+  - [ ] Центрирование
 * На следующие этапы
   - [ ] Изучить API amoled дисплеев
   - [ ] Изучить API жестов
   - [ ] Изучить API iPhone в целом
-  - [ ] http://www.yaplakal.com/forum7/topic518705.html
