- Added QtActivity child class MainActivity - Implemented raising window - Implemented keeping window alive - Implemented making window keep screen on

--- a/kitchentimer/TODO
+++ b/kitchentimer/TODO
@@ -12,7 +12,7 @@
   - [ ] Переход через час при близости к 0
   - [ ] Адовые тормоза
 * Задачи для бетта релиза
-  - [ ] Активизация приложения при срабатывании таймера (raise window)
+  - [ ] Относительное смещение тени
 * Остальное
   - [ ] Отладить все события по таймеру
   - [ ] Научиться пользоваться отладчиками
@@ -20,14 +20,15 @@
   - [ ] Разрешения растровых изображений
   - [ ] Не встроенные ресурсы для разных платформ
 * Не важное для релиза
-  - [ ] Диалоговое окно на подтверждение закрытия (??)
   - [ ] Разобраться с SVG/QPicture
   - [ ] Сделать оптимальную сборку Qt
   - [ ] Реализовать свою поддержку звука для Мака, Adnroid'а и всего остального
 * Мак
-  - [ ] Разобраться со шрифтом
-  - [ ] Разобраться со звуком
-  - [ ] Разобраться с зависанием на intro
+  - [X] Разобраться со шрифтом
+  - [X] Разобраться со звуком
+  - [X] Разобраться с зависанием на intro
+  - [ ] Unsupported composite mode
+  - [ ] Очистка кэша XCode
 * От Дениса
   - [ ] Центрирование
 * На следующие этапы
