- Finished iOS drawing

--- a/kitchentimer/TODO
+++ b/kitchentimer/TODO
@@ -8,11 +8,10 @@
   - [ ] Анимация аналогового таймера при срабатывании
   - [ ] Оптимизация/кэширование
 * Глюки
-  - [ ] Не сохранение настройки включения звука
   - [ ] Переход через час при близости к 0
   - [ ] Адовые тормоза
 * Задачи для бетта релиза
-  - [ ] Относительное смещение тени
+  - [X] Относительное смещение тени
 * Остальное
   - [ ] Отладить все события по таймеру
   - [ ] Научиться пользоваться отладчиками
@@ -24,11 +23,12 @@
   - [ ] Сделать оптимальную сборку Qt
   - [ ] Реализовать свою поддержку звука для Мака, Adnroid'а и всего остального
 * Мак
-  - [X] Разобраться со шрифтом
-  - [X] Разобраться со звуком
-  - [X] Разобраться с зависанием на intro
-  - [ ] Unsupported composite mode
+  - [X] Unsupported composite mode
   - [ ] Очистка кэша XCode
+  - [ ] Включение приложения по таймеру
+  - [X] Не засыпание приложения в несвёрнутом виде
+  - [ ] Иконки
+  - [ ] Разобраться со звуком
 * От Дениса
   - [ ] Центрирование
 * На следующие этапы
