--- a/kitchentimer/TODO
+++ b/kitchentimer/TODO
@@ -27,8 +27,8 @@
   - [ ] Очистка кэша XCode
   - [ ] Включение приложения по таймеру
   - [X] Не засыпание приложения в несвёрнутом виде
-  - [ ] Иконки
-  - [ ] Разобраться со звуком
+  - [X] Иконки
+  - [X] Разобраться со звуком
 * От Дениса
   - [ ] Центрирование
 * На следующие этапы
